--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "axios": "^1.10.0",
     "vue": "^3.5.17"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
-    "vite": "^7.0.4",
     "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.24.0"
+    "eslint-plugin-vue": "^9.24.0",
+    "vite": "^7.0.4"
   }
 }
